--- a/styles.css
+++ b/styles.css
@@ -763,9 +763,7 @@
 }
 @media screen and (min-width: 900px) {
   .manage {
-    display: flex;
-    align-items: center;
-    justify-content: baseline;
+    flex-direction: row;
     gap: 160px;
     text-align: center;
     padding: 142px 24px 102px;
