--- a/styles.css
+++ b/styles.css
@@ -775,16 +775,15 @@
   }
 }
 .manage__wheel-image {
-  width: 100%;
+  width: 290px;
+  height: 344px;
   max-width: 425px;
-  height: 100%;
-  max-height: auto;
   margin-bottom: 15px;
 }
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 400px) {
   .manage__wheel-image {
-    width: 290px;
-    height: 344px;
+    width: 100%;
+    height: 100%;
   }
 }
 .manage__wheel-text {
