--- a/styles/manage.scss
+++ b/styles/manage.scss
@@ -12,7 +12,6 @@
     padding: 20px 24px 102px;
   }
   @media screen and (min-width: $media-900) {
-    // @include flex-center(baseline, 160px);
     flex-direction: row;
     gap: 160px;
     text-align: center;
@@ -22,37 +21,27 @@
     padding: 142px 24px 102px 192px;
   }
 
-  // =====================================
-  // @include flex-center(baseline, 160px);
-  // background-color: $color-yellow-light;
-  // padding: 142px 24px 102px 192px;
-
-  // @media screen and (max-width: $media-1400) {
-  //   justify-content: center;
-  //   padding: 142px 24px 102px;
-  // }
-  // @media screen and (max-width: $media-1200) {
-  //   flex-direction: column;
-  //   text-align: center;
-  //   gap: 58px;
-  //   padding: 20px 24px 102px;
-  // }
-  // @media screen and (max-width: $media-480) {
-  //   text-align: left;
-  //   padding: 50px 24px 34px;
-  // }
-
   &__wheel-image {
-    width: 100%;
+    width: 290px;
+    height: 344px;
     max-width: 425px;
-    height: 100%;
-    max-height: auto;
     margin-bottom: 15px;
 
-    @media screen and (max-width: $media-480) {
-      width: 290px;
-      height: 344px;
+    @media screen and (min-width: $media-400) {
+      width: 100%;
+      height: 100%;
     }
+
+    // width: 100%;
+    // max-width: 425px;
+    // height: 100%;
+    // max-height: auto;
+    // margin-bottom: 15px;
+
+    // @media screen and (max-width: $media-480) {
+    //   width: 290px;
+    //   height: 344px;
+    // }
   }
 
   &__wheel-text {
