--- a/styles.css
+++ b/styles.css
@@ -790,11 +790,11 @@
   font-size: 14px;
   opacity: 0.6;
   text-align: center;
-  display: block;
+  display: none;
 }
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 400px) {
   .manage__wheel-text {
-    display: none;
+    display: block;
   }
 }
 .manage__content {
