--- a/styles/manage.scss
+++ b/styles/manage.scss
@@ -31,27 +31,16 @@
       width: 100%;
       height: 100%;
     }
-
-    // width: 100%;
-    // max-width: 425px;
-    // height: 100%;
-    // max-height: auto;
-    // margin-bottom: 15px;
-
-    // @media screen and (max-width: $media-480) {
-    //   width: 290px;
-    //   height: 344px;
-    // }
   }
 
   &__wheel-text {
     font-size: 14px;
     opacity: 0.6;
     text-align: center;
-    display: block;
+    display: none;
 
-    @media screen and (max-width: $media-480) {
-      display: none;
+    @media screen and (min-width: $media-400) {
+      display: block;
     }
   }
 
