--- a/styles.css
+++ b/styles.css
@@ -874,31 +874,24 @@
 }
 
 .communicate {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 38px;
+  padding: 58px 15px 48px;
   background-color: #fff;
 }
-.communicate__inner {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-  padding: 110px 50px 120px 130px;
-}
-@media screen and (max-width: 1320px) {
-  .communicate__inner {
-    align-items: center;
-    justify-content: center;
-    padding: 110px 50px 120px;
-  }
-}
-@media screen and (max-width: 1200px) {
-  .communicate__inner {
+@media screen and (min-width: 900px) {
+  .communicate {
     gap: 34px;
     padding: 58px 50px 120px;
   }
 }
-@media screen and (max-width: 576px) {
-  .communicate__inner {
-    padding: 58px 15px 48px;
-    gap: 38px;
+@media screen and (min-width: 1400px) {
+  .communicate {
+    gap: 24px;
+    padding: 110px 50px 120px 130px;
   }
 }
 .communicate__content {
