--- a/styles/communicate.scss
+++ b/styles/communicate.scss
@@ -1,7 +1,7 @@
 .communicate {
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  align-items: center;
   gap: 38px;
   padding: 58px 15px 48px;
   background-color: $color-light;
@@ -12,7 +12,7 @@
   }
   @media screen and (min-width: $media-1400) {
     gap: 24px;
-    padding: 110px 50px 120px 130px;
+    padding: 102px 65px 120px 0;
   }
 
   &__content {
@@ -31,7 +31,6 @@
     @media screen and (min-width: $media-900) {
       align-items: center;
       text-align: center;
-      justify-content: center;
       flex-direction: row;
     }
     @media screen and (min-width: $media-1400) {
@@ -104,19 +103,37 @@
 
   &__list {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    gap: 30px;
+    justify-content: center;
+    gap: 20px;
+    margin-top: -24px;
     font-size: 18px;
 
-    @media screen and (max-width: $media-1200) {
-      flex-wrap: wrap;
+    @media screen and (min-width: $media-400) {
+      margin-top: 0;
+      gap: 30px;
+    }
+    @media screen and (min-width: $media-1400) {
       align-items: center;
-      justify-content: center;
+      padding-left: 65px;
     }
-    @media screen and (max-width: $media-576) {
-      gap: 20px;
-      margin-top: -24px;
-    }
+
+    // ====================
+    // display: flex;
+    // align-items: center;
+    // gap: 30px;
+    // font-size: 18px;
+
+    // @media screen and (max-width: $media-1200) {
+    //   flex-wrap: wrap;
+    //   align-items: center;
+    //   justify-content: center;
+    // }
+    // @media screen and (max-width: $media-576) {
+    //   gap: 20px;
+    //   margin-top: -24px;
+    // }
 
     &-item {
       max-width: 360px;
