--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -14,6 +14,7 @@ $color-body: #f2f2f2;
 $color-gray: #d5d4d5;
 $color-dark: #000000;
 $color-border: #e3e3e3;
+$color-audience: #edf8fb;
 
 @mixin title {
   font-size: 56px;
