--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -1,20 +1,36 @@
 .audience {
-  &__inner {
-    @include flex-column(110px);
-    background-color: #edf8fb;
-    padding: 108px 56px 110px 130px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+  padding: 52px 15px 52px;
+  background-color: $color-audience;
 
-    @media screen and (max-width: $media-1320) {
-      padding: 52px 15px 130px;
-      align-items: center;
-      justify-content: center;
-      gap: 60px;
-    }
-    @media screen and (max-width: $media-576) {
-      padding: 52px 15px 52px;
-      gap: 40px;
-    }
+  @media screen and (min-width: $media-400) {
+    gap: 60px;
+    padding: 52px 15px 130px;
   }
+  @media screen and (min-width: $media-1400) {
+    gap: 110px;
+    padding: 108px 56px 110px 130px;
+  }
+
+  // ======================================
+  // @include flex-column(110px);
+  // background-color: #edf8fb;
+  // padding: 108px 56px 110px 130px;
+
+  // @media screen and (max-width: $media-1320) {
+  //   padding: 52px 15px 130px;
+  //   align-items: center;
+  //   justify-content: center;
+  //   gap: 60px;
+  // }
+  // @media screen and (max-width: $media-576) {
+  //   padding: 52px 15px 52px;
+  //   gap: 40px;
+  // }
 
   &__content {
     margin: 0 auto;
