--- a/styles.css
+++ b/styles.css
@@ -1099,14 +1099,13 @@
 
 .cards__list {
   display: flex;
-  gap: 30px;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 15px;
 }
-@media screen and (max-width: 1320px) {
+@media screen and (min-width: 1400px) {
   .cards__list {
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
+    gap: 30px;
   }
 }
 .cards__list-item {
