--- a/styles.css
+++ b/styles.css
@@ -1161,31 +1161,16 @@
 
 .swiper {
   width: 100%;
-  height: 250px;
+  height: 450px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 400px) {
   .swiper {
-    height: 285px;
+    height: 320px;
   }
 }
-@media screen and (max-width: 576px) {
+@media screen and (min-width: 900px) {
   .swiper {
-    height: 300px;
-  }
-}
-@media screen and (max-width: 470px) {
-  .swiper {
-    height: 360px;
-  }
-}
-@media screen and (max-width: 380px) {
-  .swiper {
-    height: 440px;
-  }
-}
-@media screen and (max-width: 340px) {
-  .swiper {
-    height: 450px;
+    height: 250px;
   }
 }
 
