--- a/styles/feedback.scss
+++ b/styles/feedback.scss
@@ -27,46 +27,40 @@
 }
 
 .feedback {
-  background-color: $color-light;
   position: relative;
-  padding-bottom: 50px;
   border-bottom: 1px solid rgba($color-black, 0.1);
+  background-color: $color-light;
+  padding: 0 15px;
 
-  @media screen and (max-width: $media-1200) {
-    padding: 0 15px;
+  @media screen and (min-width: $media-900) {
+    padding-bottom: 50px;
   }
 
   .feedback__blockquote-author {
     display: block;
     font-size: 16px;
     font-weight: 700;
+    text-align: left;
+    margin-top: 256px;
 
-    @media screen and (max-width: $media-768) {
-      margin-top: 90px;
+    @media screen and (min-width: $media-400) {
+      text-align: center;
+      margin-top: 130px;
     }
-    @media screen and (max-width: $media-576) {
-      margin-top: 120px;
-    }
-    @media screen and (max-width: 470px) {
-      margin-top: 156px;
-      text-align: left;
-    }
-    @media screen and (max-width: 380px) {
-      margin-top: 246px;
-    }
-    @media screen and (max-width: 340px) {
-      margin-top: 256px;
+    @media screen and (min-width: $media-900) {
+      margin-top: 60px;
     }
   }
 
   .feedback__blockquote-role {
     display: block;
     font-size: 16px;
-    color: $color-black;
+    text-align: left;
     opacity: 0.6;
+    color: $color-black;
 
-    @media screen and (max-width: 470px) {
-      text-align: left;
+    @media screen and (min-width: $media-400) {
+      text-align: center;
     }
   }
 
