--- a/styles.css
+++ b/styles.css
@@ -1232,25 +1232,26 @@
   }
 }
 .feedback__image {
-  position: absolute;
-  right: 20px;
-  bottom: 0;
-  width: 273px;
-  height: 243px;
-  z-index: 999;
+  position: static;
+  width: 290px;
+  height: 258px;
+  margin: 30px auto 48px;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 400px) {
   .feedback__image {
     display: none;
   }
 }
-@media screen and (max-width: 470px) {
+@media screen and (min-width: 1400px) {
   .feedback__image {
     display: block;
-    position: static;
-    width: 290px;
-    height: 258px;
-    margin: 30px auto 48px;
+    position: absolute;
+    bottom: 0;
+    right: 20px;
+    width: 273px;
+    height: 243px;
+    margin: 0;
+    z-index: 999;
   }
 }
 
