--- a/styles/feedback.scss
+++ b/styles/feedback.scss
@@ -87,17 +87,15 @@
 }
 
 .feedback__title {
-  font-size: 24px;
   font-weight: 700;
+  text-align: left;
+  font-size: 24px;
+  line-height: 1.3;
   color: $color-blue;
-  text-align: center;
   margin-bottom: 28px;
 
-  @media screen and (max-width: $media-576) {
-    text-align: left;
-  }
-  @media screen and (max-width: $media-480) {
-    line-height: 1.3;
+  @media screen and (min-width: $media-400) {
+    text-align: center;
   }
 }
 
