--- a/styles.css
+++ b/styles.css
@@ -1276,21 +1276,14 @@
   margin: 0 auto;
   margin-bottom: 54px;
   margin-top: -80px;
+  line-height: 1.4;
+  text-align: left;
+  margin-top: -50px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 400px) {
   .feedback__blockquote-text {
-    margin-top: -70px;
-    text-align: left;
-  }
-}
-@media screen and (max-width: 576px) {
-  .feedback__blockquote-text {
-    margin-top: -50px;
-  }
-}
-@media screen and (max-width: 470px) {
-  .feedback__blockquote-text {
-    line-height: 1.4;
+    line-height: 1.5;
+    text-align: center;
   }
 }
 
