--- a/styles/feedback.scss
+++ b/styles/feedback.scss
@@ -106,15 +106,12 @@
   margin: 0 auto;
   margin-bottom: 54px;
   margin-top: -80px;
+  line-height: 1.4;
+  text-align: left;
+  margin-top: -50px;
 
-  @media screen and (max-width: $media-768) {
-    margin-top: -70px;
-    text-align: left;
-  }
-  @media screen and (max-width: $media-576) {
-    margin-top: -50px;
-  }
-  @media screen and (max-width: 470px) {
-    line-height: 1.4;
+  @media screen and (min-width: $media-400) {
+    line-height: 1.5;
+    text-align: center;
   }
 }
