--- a/styles/order.scss
+++ b/styles/order.scss
@@ -1,27 +1,46 @@
 .order {
-  @include flex-center(flex-center, 120px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
+  gap: 40px;
   background-color: $color-light-dark;
-  padding: 72px 0;
+  padding: 50px 0 46px;
 
-  @media screen and (max-width: $media-1400) {
-    justify-content: center;
-    align-items: center;
-    padding: 72px 15px;
-  }
-  @media screen and (max-width: $media-1200) {
-    flex-direction: column;
+  @media screen and (min-width: $media-400) {
     gap: 50px;
-  }
-  @media screen and (max-width: 586px) {
-    align-items: center;
-    justify-content: center;
-    gap: 40px;
     padding: 54px 15px 46px;
   }
-  @media screen and (max-width: $media-480) {
-    padding: 50px 0 46px;
+  @media screen and (min-width: $media-1400) {
+    flex-direction: row;
+    gap: 120px;
+    padding: 72px 15px;
   }
+
+  // ===========================================
+  // @include flex-center(flex-center, 120px);
+  // justify-content: center;
+  // background-color: $color-light-dark;
+  // padding: 72px 0;
+
+  // @media screen and (max-width: $media-1400) {
+  //   justify-content: center;
+  //   align-items: center;
+  //   padding: 72px 15px;
+  // }
+  // @media screen and (max-width: $media-1200) {
+  //   flex-direction: column;
+  //   gap: 50px;
+  // }
+  // @media screen and (max-width: 586px) {
+  //   align-items: center;
+  //   justify-content: center;
+  //   gap: 40px;
+  //   padding: 54px 15px 46px;
+  // }
+  // @media screen and (max-width: $media-480) {
+  //   padding: 50px 0 46px;
+  // }
 
   &__image {
     max-width: 270px;
