--- a/styles/order.scss
+++ b/styles/order.scss
@@ -17,39 +17,13 @@
     padding: 72px 15px;
   }
 
-  // ===========================================
-  // @include flex-center(flex-center, 120px);
-  // justify-content: center;
-  // background-color: $color-light-dark;
-  // padding: 72px 0;
-
-  // @media screen and (max-width: $media-1400) {
-  //   justify-content: center;
-  //   align-items: center;
-  //   padding: 72px 15px;
-  // }
-  // @media screen and (max-width: $media-1200) {
-  //   flex-direction: column;
-  //   gap: 50px;
-  // }
-  // @media screen and (max-width: 586px) {
-  //   align-items: center;
-  //   justify-content: center;
-  //   gap: 40px;
-  //   padding: 54px 15px 46px;
-  // }
-  // @media screen and (max-width: $media-480) {
-  //   padding: 50px 0 46px;
-  // }
-
   &__image {
-    max-width: 270px;
-    height: 296px;
+    max-width: 200px;
+    height: 220px;
 
-    @media screen and (max-width: $media-480) {
-      max-width: 200px;
-      height: 220px;
-      // margin-left: -20px;
+    @media screen and (min-width: $media-400) {
+      max-width: 270px;
+      height: 296px;
     }
   }
 
