--- a/styles.css
+++ b/styles.css
@@ -1458,26 +1458,26 @@
 .order__title {
   font-size: 40px;
   font-weight: 700;
+  line-height: 100%;
+  line-height: 40px;
+  text-align: center;
+  letter-spacing: -0.25px;
 }
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 400px) {
   .order__title {
-    font-size: 40px;
-    line-height: 100%;
-    line-height: 40px;
-    text-align: center;
-    letter-spacing: -0.25px;
+    text-align: left;
   }
 }
 .order__description {
   font-size: 22px;
-  margin-bottom: 26px;
   max-width: 555px;
-  margin-bottom: 30px;
+  margin-top: 16px;
+  margin-bottom: 70px;
 }
-@media screen and (max-width: 480px) {
+@media screen and (min-width: 400px) {
   .order__description {
-    margin-bottom: 70px;
-    margin-top: 16px;
+    margin-bottom: 30px;
+    margin-bottom: 26px;
   }
 }
 .order__form {
