--- a/styles/order.scss
+++ b/styles/order.scss
@@ -38,25 +38,25 @@
   &__title {
     font-size: 40px;
     font-weight: 700;
+    line-height: 100%;
+    line-height: 40px;
+    text-align: center;
+    letter-spacing: -0.25px;
 
-    @media screen and (max-width: $media-480) {
-      font-size: 40px;
-      line-height: 100%;
-      line-height: 40px;
-      text-align: center;
-      letter-spacing: -0.25px;
+    @media screen and (min-width: $media-400) {
+      text-align: left;
     }
   }
 
   &__description {
     font-size: 22px;
-    margin-bottom: 26px;
     max-width: 555px;
-    margin-bottom: 30px;
+    margin-top: 16px;
+    margin-bottom: 70px;
 
-    @media screen and (max-width: $media-480) {
-      margin-bottom: 70px;
-      margin-top: 16px;
+    @media screen and (min-width: $media-400) {
+      margin-bottom: 30px;
+      margin-bottom: 26px;
     }
   }
 
