--- a/styles/order.scss
+++ b/styles/order.scss
@@ -13,6 +13,7 @@
   }
   @media screen and (min-width: $media-1400) {
     flex-direction: row;
+    align-items: center;
     gap: 120px;
     padding: 72px 0;
   }
