--- a/styles.css
+++ b/styles.css
@@ -1451,6 +1451,11 @@
 .order__content {
   padding: 0 15px 46px;
 }
+@media screen and (min-width: 400px) {
+  .order__content {
+    padding: 0;
+  }
+}
 .order__title {
   font-size: 40px;
   font-weight: 700;
