--- a/styles/order.scss
+++ b/styles/order.scss
@@ -31,9 +31,9 @@
   &__content {
     padding: 0 15px 46px;
 
-    // @media screen and (min-width: $media-400) {
-    //   padding: 72px 0;
-    // }
+    @media screen and (min-width: $media-400) {
+      padding: 0;
+    }
   }
 
   &__title {
