--- a/styles.css
+++ b/styles.css
@@ -1536,41 +1536,28 @@
 }
 .footer__top {
   display: grid;
-  grid-template-columns: repeat(3, 360px 220px 220px);
-  column-gap: 100px;
-  border-bottom: 1px solid rgba(43, 41, 45, 0.1);
-  padding: 42px 260px 46px 130px;
+  grid-template-columns: repeat(1, 300px);
+  justify-items: left;
+  gap: 68px;
+  border: none;
+  padding: 42px 10px 12px;
 }
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 400px) {
   .footer__top {
-    grid-template-columns: repeat(3, 300px 220px 220px);
-    justify-items: center;
-    gap: 30px;
+    padding: 42px 0 12px 15px;
   }
 }
-@media screen and (max-width: 992px) {
+@media screen and (min-width: 900px) {
   .footer__top {
     grid-template-columns: repeat(2, 300px);
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 1400px) {
   .footer__top {
-    grid-template-columns: repeat(1, 300px);
-    justify-items: left;
-  }
-}
-@media screen and (max-width: 576px) {
-  .footer__top {
-    padding: 42px 0 12px 15px;
-    grid-template-columns: repeat(1, 300px);
-    justify-items: left;
-    gap: 68px;
-  }
-}
-@media screen and (max-width: 480px) {
-  .footer__top {
-    border: none;
-    padding: 42px 10px 12px;
+    grid-template-columns: repeat(3, 360px 220px 220px);
+    column-gap: 100px;
+    border-bottom: 1px solid rgba(43, 41, 45, 0.1);
+    padding: 42px 260px 46px 130px;
   }
 }
 @media screen and (max-width: 480px) {
