--- a/styles.css
+++ b/styles.css
@@ -1544,6 +1544,7 @@
 }
 @media screen and (min-width: 400px) {
   .footer__top {
+    justify-content: center;
     padding: 42px 0 12px 15px;
   }
 }
@@ -1555,6 +1556,7 @@
 @media screen and (min-width: 1400px) {
   .footer__top {
     grid-template-columns: repeat(3, 360px 220px 220px);
+    justify-content: flex-start;
     column-gap: 100px;
     border-bottom: 1px solid rgba(43, 41, 45, 0.1);
     padding: 42px 260px 46px 130px;
